--- a/front/src/app/components/private/user/components/user-info/components/international-transactions/international-transactions.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/international-transactions/international-transactions.component.html
@@ -69,7 +69,15 @@
       />
     </div>
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-      <button class="btn btn-primary me-md-2" [disabled]="intTransForm.invalid" type="submit">Guardar</button>
+      <button class="btn btn-success me-md-2" [disabled]="intTransForm.invalid || isSubmitting" type="submit">
+        <ng-container *ngIf="!isSubmitting; else loadingTemplate">
+          Guardar
+        </ng-container>
+        <ng-template #loadingTemplate>
+          <span class="spinner-border spinner-border-sm"></span>
+          Cargando...
+        </ng-template>
+      </button>
     </div>
   </div>
 </form>
