--- a/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
@@ -293,6 +293,14 @@
     </div>
   </div>
   <div class="d-grid gap-2 mt-3">
-    <button class="btn btn-primary" [disabled]="natPersonForm.invalid" type="submit">Guardar</button>
+    <button class="btn btn-success" [disabled]="natPersonForm.invalid || isSubmitting" type="submit">
+      <ng-container *ngIf="!isSubmitting; else loadingTemplate">
+        Guardar
+      </ng-container>
+      <ng-template #loadingTemplate>
+        <span class="spinner-border spinner-border-sm"></span>
+        Cargando...
+      </ng-template>
+    </button>
   </div>
 </form>
