--- a/front/src/app/components/public/about/about.component.html
+++ b/front/src/app/components/public/about/about.component.html
@@ -6,7 +6,7 @@
     <div class="card shadow text-center">
         <div class="row align-items-center">
             <div class="col-lg-6 d-flex justify-content-center">
-                <img class="img-fluid" src="../../../assets/images/team/team1.jpg" alt="Nuestro equipo">
+                <img class="img-fluid" src="../../../assets/team.png" alt="Nuestro equipo">
             </div>
             <div class="col-lg-6 col-12 text-center mt-3 mt-lg-0 d-flex flex-column justify-content-center">
                 <h2 class="fw-bold title-color">
