Fix redirection link in services

--- a/front/src/app/components/public/credit-service/credit-service.component.html
+++ b/front/src/app/components/public/credit-service/credit-service.component.html
@@ -118,7 +118,7 @@
                         </ul>
 
                     <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                        <button class="text-center btn btn-primary" type="button" routerLink="/user/credits"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
+                        <button class="text-center btn btn-primary" type="button" routerLink="/auth/user/request/credit"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
                     </div>
                 </div>
                 
@@ -172,7 +172,7 @@
                         </li>
                     </ul>
                     <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                        <button class="text-center btn btn-primary" type="button" routerLink="/user/credits"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
+                        <button class="text-center btn btn-primary" type="button" routerLink="/auth/user/request/credit"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
                     </div>
                 </div>
                 <div *ngIf="selectedCreditLine === 'CREDITO LIBRE INVERSION'" class="credit-line">
@@ -198,7 +198,7 @@
                             </li>
                             </ul>
                             <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                            <button class="text-center btn btn-primary" type="button" routerLink="/user/credits"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
+                            <button class="text-center btn btn-primary" type="button" routerLink="/auth/user/request/credit"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
                             </div>
                             
                             </div>
@@ -244,7 +244,7 @@
                                     </li>
                                 </ul>
                                 <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                                    <button class="text-center btn btn-primary" type="button" routerLink="/user/credits"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
+                                    <button class="text-center btn btn-primary" type="button" routerLink="/auth/user/request/credit"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO EXTRAORDINARIO'" class="credit-line">
@@ -270,7 +270,7 @@
                                     </li>
                                 </ul>
                                 <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                                    <button class="text-center btn btn-primary" type="button" routerLink="/user/credits"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
+                                    <button class="text-center btn btn-primary" type="button" routerLink="/auth/user/request/credit"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO CREDIPRIMA'" class="credit-line">
@@ -319,7 +319,7 @@
                                     </li>
                                 </ul>
                                 <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                                    <button class="text-center btn btn-primary" type="button" routerLink="/user/credits"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
+                                    <button class="text-center btn btn-primary" type="button" routerLink="/auth/user/request/credit"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO DE CALAMADAD'" class="credit-line">
@@ -372,7 +372,7 @@
                                     </li>
                                 </ul>
                                 <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                                    <button class="text-center btn btn-primary" type="button" routerLink="/user/credits"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
+                                    <button class="text-center btn btn-primary" type="button" routerLink="/auth/user/request/credit"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO VACACIONAL'" class="credit-line">
@@ -398,7 +398,7 @@
                                     </li>
                                 </ul>
                                 <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                                    <button class="text-center btn btn-primary" type="button" routerLink="/user/credits"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
+                                    <button class="text-center btn btn-primary" type="button" routerLink="/auth/user/request/credit"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITOS PARA EDUCACION'" class="credit-line">
@@ -435,7 +435,7 @@
                                     </li>
                                 </ul>
                                 <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                                    <button class="text-center btn btn-primary" type="button" routerLink="/user/credits"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
+                                    <button class="text-center btn btn-primary" type="button" routerLink="/auth/user/request/credit"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO MICROEMPRESA'" class="credit-line">
@@ -472,7 +472,7 @@
                                     </li>
                                 </ul>
                                 <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                                    <button class="text-center btn btn-primary" type="button" routerLink="/user/credits"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
+                                    <button class="text-center btn btn-primary" type="button" routerLink="/auth/user/request/credit"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO CREDIAGIL'" class="credit-line">
@@ -505,7 +505,7 @@
                                     </li>
                                 </ul>
                                 <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                                    <button class="text-center btn btn-primary" type="button" routerLink="/user/credits"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
+                                    <button class="text-center btn btn-primary" type="button" routerLink="/auth/user/request/credit"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO ORDINARIO'" class="credit-line">
@@ -550,7 +550,7 @@
                                     </li>
                                 </ul>
                                 <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                                    <button class="text-center btn btn-primary" type="button" routerLink="/user/credits"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
+                                    <button class="text-center btn btn-primary" type="button" routerLink="/auth/user/request/credit"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO CREDIFACIL'" class="credit-line">
@@ -599,7 +599,7 @@
                                     </li>
                                 </ul>
                                 <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                                    <button class="text-center btn btn-primary" type="button" routerLink="/user/credits"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
+                                    <button class="text-center btn btn-primary" type="button" routerLink="/auth/user/request/credit"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO CREDICUMPLEAÑOS'" class="credit-line">
@@ -636,7 +636,7 @@
                                     </li>
                                 </ul>
                                 <div class="d-grid gap-2 col-6 mx-auto mb-3">
-                                    <button class="text-center btn btn-primary" type="button" routerLink="/user/credits"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
+                                    <button class="text-center btn btn-primary" type="button" routerLink="/auth/user/request/credit"><i class="bi bi-person-raised-hand icon"></i>Solicítalo aquí</button>
                                 </div>
                             </div>
             </div>
